# lastfm-to-spotify

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: create_or_update_playlist.py
lastfm_to_spotify/: __init__.py  cli.py
