[tool.poetry]
name = "lastfm-to-spotify"
version = "0.1.0"
description = ""
authors = ["hp0404 <hptheresearcher@gmail.com>"]
readme = "README.md"
packages = [{include = "lastfm_to_spotify"}]

[tool.poetry.scripts]
lastfm-to-spotify = "lastfm_to_spotify.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
pylast = "^5.1.0"
spotipy = "^2.23.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
